<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#23A69A"
    android:orientation="vertical"
    android:paddingTop="@dimen/mardin_20dp"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:src="@drawable/hambuger" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:text="Trọng Phú"
                android:textColor="@color/color_white"
                android:textSize="@dimen/mardin_20dp" />

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:src="@drawable/optionp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_35dp"
                android:src="@drawable/anhdaidien" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mardin_20dp"
                android:gravity="center"
                android:text="Trọng Phú"
                android:textColor="@color/color_white"
                android:textSize="@dimen/mardin_20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/number_0962"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/margin_35dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_videos"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/mardin_20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/number_692"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/margin_35dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/titile_following"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/mardin_20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/number_886"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/margin_35dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_followers"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/mardin_20dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_white">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/anhdep"
                android:layout_width="@dimen/margin_60dp"
                android:layout_height="@dimen/margin_60dp"
                android:layout_margin="@dimen/margin_10dp"
                android:src="@drawable/anhdaidien" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/anhdep"
                android:text="@string/title_october_10"
                android:textSize="@dimen/margin_35dp" />

            <TextView
                android:id="@+id/tv_october"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_name"
                android:layout_toRightOf="@id/anhdep"
                android:text="@string/title_trong_phu" />

            <ImageView
                android:layout_width="@dimen/margin_30dp"
                android:layout_height="@dimen/margin_30dp"
                android:layout_below="@id/tv_name"
                android:layout_marginLeft="@dimen/margin_35dp"
                android:layout_toRightOf="@id/tv_october"
                android:src="@drawable/ic_switch" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingTop="@dimen/margin_10dp"
                android:text="@string/title_17_min_ago" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/anhdep"
                android:layout_marginBottom="@dimen/mardin_20dp"
                android:src="@drawable/anh_dep" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>