<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#219FA3"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imv_iconman3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/abccc"></ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mardin_20dp"
        android:layout_marginRight="@dimen/mardin_20dp"
        android:text="@string/title_email"
        android:textColor="@color/color_yellow" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mardin_20dp"
        android:layout_marginRight="@dimen/mardin_20dp"
        android:textColor="@color/color_yellow" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mardin_20dp"
        android:layout_marginRight="@dimen/mardin_20dp"
        android:text="@string/title_password"
        android:textColor="@color/color_black" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mardin_20dp"
        android:layout_marginTop="@dimen/margin_25dp"
        android:layout_marginRight="@dimen/mardin_20dp"
        android:background="@color/color_yellow"
        android:paddingTop="@dimen/margin_17dp"
        android:paddingBottom="@dimen/margin_17dp"
        android:text="Register"
        android:textColor="@color/color_black"
        android:textSize="@dimen/mardin_20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30dp"
        android:gravity="center"
        android:text="@string/title_forgot_your_password"
        android:textColor="@color/color_yellow"
        android:textSize="@dimen/margin_17dp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_40dp"
        android:gravity="center"
        android:text="Already register . Login me!"
        android:textColor="@color/color_white"
        android:textSize="@dimen/margin_17dp" />
</LinearLayout>